<resources>
    <string name="app_name">My Places</string>
    <string name="transiction_location_image">location_image</string>
    <string name="transiction_location_stars">location_stars</string>
    <string name="home_title">Home</string>
    <string name="detail_title_photos">FOTOS</string>
    <string name="detail_title_about">SOBRE</string>
    <string name="detail_title_review">REVIEW</string>
    <string name="user_name">Selem\nAfonso</string>
    <string name="profile_button_follow">SEGUIR</string>
    <string name="profile_user_email">mail@gmail.com</string>
    <string name="profile_user_phone">(XX) XXXXX-XXXX</string>
    <string name="profile_user_location">Belo Horizonte - MG</string>
    <string name="share">Compartilhar</string>
    <string name="detail_share_name">Compartilhe este lugar</string>
    <string name="default_network_error">Conecte seu celular à rede internet e tente novamente.</string>
    <string name="service_error">Estamos com intermitência em nossos servidores. Tente novamente.</string>
    <string name="generic_error">Não conseguimos processar sua solicitação. Tente novamente.</string>
    <string name="icon_bad_error">:(</string>
    <string name="detail_time_monday">seg: %s\n</string>
    <string name="detail_time_tuesday">ter: %s\n</string>
    <string name="detail_time_wednesday">qua: %s\n</string>
    <string name="detail_time_thursday">qui: %s\n</string>
    <string name="detail_time_friday">sex: %s\n</string>
    <string name="detail_time_saturday">sab: %s\n</string>
    <string name="detail_time_sunday">dom: %s</string>
</resources>
